ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: price-drop-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
  - host: price-drop.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: price-drop-svc
            port:
              number: 80
